# Distributed-File-Storage-cpp

./: CMakeLists.txt  Makefile  README.md  plot_results.py
apps/: main_client.cpp  main_metadata_node.cpp  main_performance_evaluation.cpp  main_performance_experiments.cpp  main_storage_node.cpp  main_system_tests.cpp  main_verify_files.cpp
src/client/: client.cpp  client.hpp  verify_files.cpp  verify_files.hpp
src/common/: chunk.cpp  chunk.hpp  file_metadata.hpp  file_utils.cpp  file_utils.hpp  hash_utils.cpp  hash_utils.hpp  node_config.cpp  node_config.hpp  node_info.hpp  sha256.cpp  sha256.hpp
src/dht/: consistent_hash.cpp  consistent_hash.hpp
src/metadata/: metadata_node.cpp  metadata_node.hpp
src/network/: tcp_client.cpp  tcp_client.hpp  tcp_server.cpp  tcp_server.hpp
src/storage/: storage_node.cpp  storage_node.hpp
